--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,10 +8,12 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -19,3 +21,11 @@ body {
   color: #2e363e;
 }
 
+.main-screen {
+  padding: 0px var(--horizontal-space);
+}
+
+.main-screen__nd {
+  padding: 0px var(--horizontal-space);
+  margin-top: 20px;
+}
