--- a/CSS/components/badge.css
+++ b/CSS/components/badge.css
@@ -9,3 +9,42 @@ align-items: center;
 color: white;
 font-weight:  600;
 }
+.point {
+  background-color: tomato;
+  width: 8px;
+  height: 8px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 18px;
+  left: 70px;
+  }
+  .point2 {
+    background-color: tomato;
+    width: 8px;
+    height: 8px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 16px;
+    left: 120px;
+    }
+  .info-mark {
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    font-size: 13px;
+    font-weight: 900;
+    color: rgba(255, 99, 71, 0.836);
+    border: 2px solid rgba(255, 99, 71, 0.836);
+    bottom: 16px;
+    left: 115px;
+  }
