--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -19,7 +19,21 @@
 position: absolute;
 left: 15px;
 bottom: 15px;
+animation: notificationanimation 2s ease-in-out infinite;
 }
+
+@keyframes notificationanimation {
+  0%{
+    transform: none;
+  }
+  50%{
+    transform: translatey(-5px) rotateY(360deg);
+  }
+  100%{
+    transform: none;
+  }
+}
+
 .nav__notification2 {
   background-color: tomato;
   width: 8px;
@@ -31,4 +45,30 @@ bottom: 15px;
   position: absolute;
   left: 35px;
   bottom: 25px;
+  }
+
+  @keyframes appearBtnAnimation {
+    from {
+      opacity: 0;
+    }
+    to {
+      transform: none;
+      opacity: 1;
+    }
+  }
+  
+  .nav__bnt {
+    transform: translateY(50px);
+    animation: appearBtnAnimation 0.3s ease-in-out forwards;
+    opacity: 0;
+  }
+
+  .nav__bnt:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+  .nav__bnt:nth-child(3) {
+    animation-delay: 0.5s;
+  }
+  .nav__bnt:last-child {
+    animation-delay: 0.8s;
   }
