--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -28,6 +28,17 @@
   color: var(--font-colrol);
 }
 
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+}
+
 #splash-screen {
   background-color: var(--yellow);
   position: absolute;
@@ -38,4 +49,6 @@
   justify-content: center;
   align-items: center;
   font-size: 132px;
+  animation: hideSplashScreen 0.3s ease-in-out forwards;
+  animation-delay: 2s;
 }
